--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt
+          pip install -r requirements.txt with --skip-unresolved
       - name: Install Snyk and scan
         run: |
           curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
