--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -13,12 +13,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r requirements.txt
       - name: Install Snyk and scan
         run: |
           curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
@@ -26,4 +20,13 @@ jobs:
           mv ./snyk /usr/local/bin/
           snyk auth ${{ secrets.SNYK_TOKEN }}
           snyk code test
+      - name: Install Snyk and scan
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
+          curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
+          chmod +x ./snyk
+          mv ./snyk /usr/local/bin/
+          snyk auth ${{ secrets.SNYK_TOKEN }}
           snyk test
