--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -13,14 +13,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - name: Install Snyk and scan
+      - name: Scan source code SAST
         run: |
           curl https://static.snyk.io/cli/latest/snyk-linux -o snyk
           chmod +x ./snyk
           mv ./snyk /usr/local/bin/
           snyk auth ${{ secrets.SNYK_TOKEN }}
           snyk code test
-      - name: Install Snyk and scan
+      - name: Scan dependencies SCA
         run: |
           python -m venv venv
           source venv/bin/activate
