--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -30,3 +30,8 @@ jobs:
           pip install -r requirements.txt
           snyk auth ${{ secrets.SNYK_TOKEN }}
           snyk test
+          snyk iac test
+      - name: Scan iac IAC
+        run: |
+          snyk auth ${{ secrets.SNYK_TOKEN }}
+          snyk iac test
