--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Scan iac IAC
         run: |
           snyk auth ${{ secrets.SNYK_TOKEN }}
-          snyk iac test --report
+          snyk iac test --severity-threshold=high --report
       - name: Scan dependencies SCA
         run: |
           python -m venv venv
