test policy gate

--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -30,8 +30,8 @@ jobs:
           snyk iac test --report --json > snyk-iac-results.json || true
           snyk iac test || true
           cat snyk-iac-results.json
-          high_count=$(jq '[.vulnerabilities[] | select(.severity == "high")] | length' snyk-iac-results.json)
-          critical_count=$(jq '[.vulnerabilities[] | select(.severity == "critical")] | length' snyk-iac-results.json)
+          high_count=$(jq '[.infrastructureAsCodeIssues[] | select(.severity == "high")] | length' snyk-iac-results.json)
+          critical_count=$(jq '[.infrastructureAsCodeIssues[] | select(.severity == "critical")] | length' snyk-iac-results.json)
 
           # Affichage + contrôle de sortie
           if [ "$high_count" -gt 0 ] || [ "$critical_count" -gt 0 ]; then
