--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -22,21 +22,12 @@ jobs:
       - name: Scan source code SAST
         run: |
           snyk auth ${{ secrets.SNYK_TOKEN }}
-          snyk code test --json-file-output=snyk-code-results.json || true
-          high_count=$(jq '.runs[].tool.driver.rules[] | select(.properties.precision == "very-high") | .id' snyk-code-results.json)
-
-          # Affichage + contrôle de sortie
-          if [ "$high_count" -gt 0 ] || [ "$critical_count" -gt 0 ]; then
-            echo "❌ Échec : $critical_count vulnérabilités CRITICAL, $high_count HIGH"
-            exit 1
-          else
-            echo "✅ Aucun HIGH ou CRITICAL"
-            exit 0
-          fi
+          snyk code test > snyk-code-results || true
       - uses: actions/upload-artifact@v4
         with:
-            name: my-artifact
-            path: snyk-code-results.json
+          name: my-artifact
+          path: snyk-code-results
+
       - name: Scan iac IAC
         run: |
           snyk auth ${{ secrets.SNYK_TOKEN }}
