--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -24,11 +24,11 @@ jobs:
           snyk auth ${{ secrets.SNYK_TOKEN }}
           snyk code test > snyk-code-results || true
           snyk code test || true
-          high_count=$(grep -c '^✗ \[HIGH\] ' snyk-code-results)
+          high_count=$(grep -c '[HIGH] ' snyk-code-results)
           # Affichage + contrôle de sortie
           if [ "$high_count" -gt 0 ]; then
             echo "❌ Échec : $high_count HIGH"
-            exit 0
+            exit 1
           else
             echo "✅ Aucun HIGH ou CRITICAL"
             exit 0
