--- a/deployment.yml
+++ b/deployment.yml
@@ -19,7 +19,7 @@ spec:
             - containerPort: 80
           securityContext:
             runAsUser: 0       # ❌ Runs as root
-            privileged: true
+            privileged: false
           env:
             - name: APP_SECRET
               value: "supersecret"  # ❌ Secret exposed in plain text
