--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -69,3 +69,7 @@ jobs:
             echo "✅ Aucun HIGH ou CRITICAL"
             exit 0
           fi
+      - uses: actions/upload-artifact@v4
+        with:
+          name: my-artifact
+          path: snyk-sca-results
