--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -72,7 +72,16 @@ jobs:
       - name: Scan container image
         run: |
           snyk auth ${{ secrets.SNYK_TOKEN }}
-          snyk container test python:3.6-slim > snyk-sca-results || true
+          snyk container test python:3.6-slim > snyk-container-results || true
           snyk container test python:3.6-slim || true
-          # high_count=$(grep -c "\[High Severity\]" snyk-sca-results || true)
-          # critical_count=$(grep -c "\[Critical Severity\]" snyk-sca-results || true)
+          high_count=$(grep -c "\High severity vulnerability\" snyk-container-results || true)
+          critical_count=$(grep -c "\Critical severity vulnerability\" snyk-container-results || true)
+          
+          # Affichage + contrôle de sortie
+          if [ "$high_count" -gt 0 ] || [ "$critical_count" -gt 0 ]; then
+              echo "❌ Échec : $critical_count vulnérabilités CRITICAL, $high_count HIGH"
+              exit 1
+          else
+              echo "✅ Aucun HIGH ou CRITICAL"
+              exit 0
+          fi
