test container policy gate

--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -74,8 +74,8 @@ jobs:
           snyk auth ${{ secrets.SNYK_TOKEN }}
           snyk container test python:3.6-slim > snyk-container-results || true
           snyk container test python:3.6-slim || true
-          high_count=$(grep -c "\High severity vulnerability\" snyk-container-results || true)
-          critical_count=$(grep -c "\Critical severity vulnerability\" snyk-container-results || true)
+          high_count=$(grep -c "\High severity\" snyk-container-results || true)
+          critical_count=$(grep -c "\Critical severity\" snyk-container-results || true)
           
           # Affichage + contrôle de sortie
           if [ "$high_count" -gt 0 ] || [ "$critical_count" -gt 0 ]; then
